fix gap between header and top of page on dex

--- a/config/oauth/theme/styles.css
+++ b/config/oauth/theme/styles.css
@@ -11,7 +11,7 @@
 	font-size: 13px;
 	font-weight: 100;
 	height: 60px;
-	margin-top: 2px;
+	margin-top: 0px;
 	overflow: hidden;
 }
 
